--- a/assets/package.json
+++ b/assets/package.json
@@ -6,13 +6,16 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "google-map-react": "^1.1.4",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "milligram": "^1.3.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
