--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,7 @@
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.7.0",
+    "react-router-dom": "^5.0.0",
     "reactjs-popup": "^1.3.2",
     "styled-components": "^4.2.0"
   },
