--- a/assets/package.json
+++ b/assets/package.json
@@ -13,10 +13,12 @@
     "milligram": "^1.3.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.7.0",
     "react-geolocated": "^2.4.1",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.0.0",
     "reactjs-popup": "^1.3.2",
     "styled-components": "^4.2.0"
